lox-tests/tests/inheritance/inherit_from_function.stderr
ERROR: Superclass must be a valid class
 --> 3:18
  |
3 | class Subclass < foo {} // expect runtime error: Superclass must be a class.
  |                  ^-^
